--- a/css/layout.css
+++ b/css/layout.css
@@ -8,7 +8,7 @@ html {
 	}
 
 body {
-	font: 13px Helvetica, Arial, Verdana, sans-serif;
+	font: 13px Helvetica Neue,Helvetica,Arial,sans-serif;
 	color:#ffffff;
 	/*background-color: rgb(45,38,79);*/
 	background-color: #202040;
