--- a/css/layout.css
+++ b/css/layout.css
@@ -896,6 +896,12 @@ input.userInput, input.paswInput, input.emalInput{
 	border: 1px solid #ffffff;
 }
 
+.sessNum{
+	float:right;
+	position:relative;
+	top:-40px;
+}
+
 
 
 #newbackup{
@@ -954,7 +960,7 @@ input.userInput, input.paswInput, input.emalInput{
 
 #backupNotes{
 	position:absolute;
-	bottom:90px;
+	bottom:125px;
 	right:10px;
 }
 
@@ -980,12 +986,14 @@ input.userInput, input.paswInput, input.emalInput{
 
 #deleted{
 	position:absolute;
-	top:48px;
-	right:10px;
-	height:50px;
+	bottom:5px;
+	left:5px;
+	height:45px;
+	width:85px;
 	text-align:center;
-	padding-top:10px;
+	padding-top:5px;
 	border:2px solid #ff0000;
+	margin:10px;
 }
 
 #savedMics{
