--- a/css/layout.css
+++ b/css/layout.css
@@ -95,7 +95,7 @@ textarea{resize: none}
     border-bottom: 1px solid #ffffff;
 }
 
-#subHead{
+#subHead, .subHead{
 	clear:both;
 	width:860px;
 	padding: 30px 0 5px 0;
@@ -1684,17 +1684,19 @@ text-align:center;
 #clientDriveDetails{
 	position:relative;
 	width:840px;
+	height:200px;
 	border:1px solid #ffffff;
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
 	padding:10px;
+	margin-bottom:20px;
 }
 
 #driveName{
 	position:relative;
 	float:left;
-	height:90px;
+	height:65px;
 	width:65%;
 }
 
@@ -1748,13 +1750,33 @@ margin-bottom:10px;
 	outline:none;
 	border:none;
 }
-#driveSubmit{
-	clear:both;
-	border:none;
-	margin:10px 0px 5px 350px;
+
+.driveNotes{
+	position:absolute;
+	float:left;
+	clear:left;
+	top:70px;
+	left:30px;
 }
 
-#driveSubmit input{
+.driveNotes textarea, .editDriveNotes textarea{
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	border:none;
+	outline:none;
+	padding:12px;
+}
+
+#driveSubmit{
+	position:absolute;
+	bottom:20px;
+	right:80px;
+	clear:both;
+	border:none;
+}
+
+#driveSubmit input, #modifyNotes input{
 	width:140px;
 	border:none;
 	outline:none;
@@ -1798,6 +1820,7 @@ margin-bottom:10px;
 #driveList td:last-child{width:150px; text-align:center;}
 /*----------- Edit Backup Drive Contents -----------*/
 
+
 #legacyDate{
 	position:absolute;
 	float:left;
@@ -1820,4 +1843,17 @@ margin-bottom:10px;
 	font-variant: small-caps;
 	font-size: 14px;
 }
+
+#editDriveNotes{
+	position:relative;
+	width:840px;
+	}
+
+#modifyNotes{
+	position:absolute;
+	right:0px;
+	bottom:5px;
+}
+
+
 
