--- a/css/layout.css
+++ b/css/layout.css
@@ -931,6 +931,7 @@ input.userInput, input.paswInput, input.emalInput{
 /* ---------------- new_backup.php -------------------------------------- */
 .session-backup-details{
 	position:relative;
+	float:left;
 	left:0px;
 	font-size: 16px;
 	font-variant: small-caps;
@@ -950,13 +951,13 @@ input.userInput, input.paswInput, input.emalInput{
 
 #newbackup{
 	position:relative;
-	left:330px;
+	float:right;
+	right:100px;
 	width:500px;
 	height:530px;
-	bottom:552px;
 	padding:10px;
 	border: 1px solid #ffffff;
-	margin-bottom:-450px;
+	margin-bottom:119px;
 }
 
 #BackupName input{
@@ -1058,6 +1059,7 @@ input.userInput, input.paswInput, input.emalInput{
 	margin:auto;
 	font-size: 14px;
 	text-align:left;
+	clear:both;
 	margin-bottom:80px;
 }
  #micList th{
@@ -1083,6 +1085,18 @@ input.userInput, input.paswInput, input.emalInput{
 #newMicBak{
 	position:absolute;
 	bottom:20px;
+}
+
+#cupboard-drive-panel{
+	position:relative;
+	clear:both;
+	top:443px;
+	right:11px;
+	padding:10px;
+	width:500px;
+	height:80px;
+	border:1px solid #fff;
+	display:none;
 }
 /* ---------------- BackupDrive.php / deletion.php----------------------- */
 
