--- a/css/layout.css
+++ b/css/layout.css
@@ -957,7 +957,7 @@ input.userInput, input.paswInput, input.emalInput{
 	height:530px;
 	padding:10px;
 	border: 1px solid #ffffff;
-	margin-bottom:119px;
+	margin-bottom:160px;
 }
 
 #BackupName input{
@@ -1094,10 +1094,36 @@ input.userInput, input.paswInput, input.emalInput{
 	right:11px;
 	padding:10px;
 	width:500px;
-	height:80px;
+	height:120px;
 	border:1px solid #fff;
 	display:none;
 }
+
+#cupbDriveSelect{
+	position:relative;
+	margin-left:25px;
+	width:450px;
+}
+
+#addDrive{
+	display:none;
+	position:relative;
+	margin:20px 0 0 25px;
+	width:200px;
+}
+#addDrive input{
+	width:200px;
+	height:20px;
+	padding:2px;
+	outline:none;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	border:none;
+
+}
+
+
 /* ---------------- BackupDrive.php / deletion.php----------------------- */
 
 .backupDrive{
