--- a/css/layout.css
+++ b/css/layout.css
@@ -169,7 +169,7 @@ nav ul li.main{
 	float:left;
 	border-top:0px !important;
 	border-bottom:0px !important;
-	border:1px solid #ffffff;
+	border:0px;
 	text-align:center;
 	width:120px;
 	height:30px;
