Session model Redo
Session section now with models/objects

--- a/css/layout.css
+++ b/css/layout.css
@@ -469,8 +469,7 @@ input.userInput, input.paswInput, input.emalInput{
 
 #searchCli input#clisearch, #searchCmp input#composersearch, #searchSS input#searchSSNo, #searchBakName input#baksearch{
 	float:left;
-	
-	margin:30px 10px 0 0;
+	margin:20px 10px 10px 0;
 	padding: 5px;
 }
 
@@ -489,10 +488,10 @@ input.userInput, input.paswInput, input.emalInput{
 	padding: 5px;
 }
 
-#searchCli input.submit, #searchCmp input.submit, #searchBakName input.submit{
+#searchCli input.submit, #searchCmp input.submit, #searchBakName input.submit, #searchEng input.submit, #searchAst input.submit, #searchStd input.submit{
 	position:relative;
 	width:100px;
-	bottom:-45px;
+	bottom:-10px;
 }
 
 #searchSS input.submit{
@@ -500,12 +499,6 @@ input.userInput, input.paswInput, input.emalInput{
 	top:110px;
 	width:100px;
 	right:155px;
-}
-
-#searchEng input.submit, #searchAst input.submit, #searchStd input.submit{
-	position:relative;
-	width:100px;
-	bottom:-5px;
 }
 
 #dateStart, #dateEnd{
@@ -1223,14 +1216,14 @@ tr.bakKeep {
 #resultTable th{
 	padding: 0 0.5em;
 	text-align: left;
-	border-right:1px dotted #ffffff;
-	border-bottom:1px dotted #ffffff;
+	border-right:1px solid #ffffff;
+	border-bottom:1px solid #ffffff;
 	}
 
 #resultTable td{
-	border-bottom: 1px solid #CCC;
-	border-right:1px dotted #CCC;
-	padding: 0 0.5em;
+	border-bottom:1px solid #CCC;
+	border-right:1px solid #CCC;
+	padding: 2px 8px;
 	}
 
 #resultTable td:first-child{
@@ -1245,7 +1238,7 @@ tr.bakKeep {
 }
 
 #resultTable td:nth-child(3){
-	width:250px;
+	width:320px;
 }
 
 #resultTable td:nth-child(4){
@@ -1254,20 +1247,17 @@ tr.bakKeep {
 }
 
 #resultTable td:nth-child(5){
-	width:60px;
+	width:35px;
 	text-align:center;
 }
 
 #resultTable td:nth-child(6){
-	width:60px;
+	width:35px;
 	text-align:center;
 }
-#resultTable td:nth-child(7){
-	width:50px;
-	text-align:center;
-}
+
 #resultTable td:last-child{
-	width:120px;
+	width:100px;
 	text-align:center;
 }
 
@@ -1552,10 +1542,7 @@ input#repairMic{
 	margin:auto;
 	height:100px;
 	margin-bottom:10px;
-}
-
-#micList.prev{
-	left:170px;
+	width:600px;
 }
 
 .micList-item{
