Ajaxify continuing session select
Minimise the results shown to the user by only showing results relating
to the currently selected studio.

--- a/css/layout.css
+++ b/css/layout.css
@@ -385,6 +385,10 @@ input.userInput, input.paswInput, input.emalInput{
 	font-size: 16px;
 }
 
+#sessCont{
+	min-width: 400px;
+}
+
 #staffSel{
 	position:relative;
 	top:150px;
