Implement Ajax for Screen Update
Implementing an ajax call to retrieve updates for the reception screen
rather than relying on a complete page refresh every 15 mins.
Prevents the screen attached to the raspberry pi from flashing due to
this page refresh and prevents a blank screen displaying if database or
web server is down when the update is called.

All around better solution.

--- a/screen/assets/Screen.css
+++ b/screen/assets/Screen.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Roboto';
-  src: url('Roboto/Roboto-Roboto-Light.ttf')  format('truetype'); /* Safari, Android, iOS */
+  src: url('Roboto/Roboto-Light.ttf')  format('truetype'); /* Safari, Android, iOS */
   font-weight: 300;
 }
 
@@ -101,7 +101,7 @@ img{
 {
   font-size: 1.1em;
   position:absolute;
-  right: 140px;
+  right: 120px;
   top:410px;
   text-align: center;
 
