Mic Link Fix & microphone section layout
Cleaning up the code to make it more readable and fixing the microphone
return link to not display user warning when clicked as it was using the
 same css class as the session delete link which has a javascript event
 handler attached to it's click event.

--- a/css/layout.css
+++ b/css/layout.css
@@ -748,12 +748,12 @@ input.userInput, input.paswInput, input.emalInput{
 	top:5px;
 	right:8px;
 }
-#timetable .editLink{
+#timetable .editLink, #timetable .micOutLink{
 	position:absolute;
 	right:5px;
 	bottom:2px;
 }
-#timetable .deleteLink{
+#timetable .deleteLink, #timetable .micInLink{
 	position:absolute;
 	right:5px;
 	bottom:25px;
