Table Print Layout
Border Colour for tables in print layout change

--- a/css/print.css
+++ b/css/print.css
@@ -29,14 +29,19 @@ table a{
 	text-decoration: none;
 	text-transform: none;
 }
+th{
+	border-color: #000 !important;
+}
 tr{ 
   	position:relative;
-  	page-break-inside:avoid; 
+  	page-break-inside:avoid;
+  	border-color:#000 !important;
  }
 
 td{ 
   	position:relative;
-  	page-break-inside:avoid; 
+  	page-break-inside:avoid;
+  	border-color: #000 !important;
   }
 
 
